// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangePicker Component renders correctly with custom format 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value="2025-02-15"
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value="2025-03-15"
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="mia-platform-picker-clear"
      role="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with custom placeholders 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Custom start"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="Custom end"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with defaultValue prop 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value="15/02/2025"
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value="15/03/2025"
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="mia-platform-picker-clear"
      role="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with isErrorStatus prop 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined mia-platform-picker-status-error"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with prop allowClear=false 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value=""
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with showTime and custom format 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="21"
        value="2025-02-15 00.00.00"
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="21"
        value="2025-03-15 00.00.00"
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="mia-platform-picker-clear"
      role="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with value and defaultValue props 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value="16/02/2025"
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value="16/03/2025"
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="mia-platform-picker-clear"
      role="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`RangePicker Component renders correctly with value prop 1`] = `
<DocumentFragment>
  <div
    class="mia-platform-picker mia-platform-picker-range mia-platform-picker-outlined"
  >
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="start"
        placeholder="Start date"
        size="12"
        value="16/02/2025"
      />
    </div>
    <div
      class="mia-platform-picker-range-separator"
    >
      <span
        aria-label="to"
        class="mia-platform-picker-separator"
      >
        <span
          aria-label="swap-right"
          class="anticon anticon-swap-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="swap-right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M873.1 596.2l-164-208A32 32 0 00684 376h-64.8c-6.7 0-10.4 7.7-6.3 13l144.3 183H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h695.9c26.8 0 41.7-30.8 25.2-51.8z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="mia-platform-picker-input"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        date-range="end"
        placeholder="End date"
        size="12"
        value="16/03/2025"
      />
    </div>
    <div
      class="mia-platform-picker-active-bar"
      style="position: absolute; width: 0px;"
    />
    <span
      class="mia-platform-picker-suffix"
    >
      <span
        aria-label="calendar"
        class="anticon anticon-calendar"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="calendar"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
          />
        </svg>
      </span>
    </span>
    <span
      class="mia-platform-picker-clear"
      role="button"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;
